manifests/argo_applications/authentik/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
spec:
  ingressClassName: traefik
  rules:
    - host: auth.cindergla.de
      http:
        paths:
          - backend:
              service:
                name: authentik
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - authentik.cindergla.de
